// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExchangeTransactionsRow > should render (Expired) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-danger-400"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="clock-error"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <path
                      d="M15 8c0-3.9-3.1-7-7-7S1 4.1 1 8s3.1 7 7 7m7 4c2.2 0 4-1.8 4-4s-1.8-4-4-4-4 1.8-4 4 1.8 4 4 4z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="2"
                    />
                    <path
                      d="M17 13l-4 4"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                    />
                    <path
                      d="M8 8V5m0 3l1 1"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="2"
                    />
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Failed) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-danger-400"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M7 13l6-6M13 13L7 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Finished) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-success-600"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-check-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M13.6 6.5l-5 6.8c-.2.3-.6.4-.9.2l-.1-.1L6.4 12"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (New) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-warning-300"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="clock"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-miterlimit="10"
                      stroke-width="2"
                      transform="translate(1.5 1.5)"
                    >
                      <circle
                        cx="8.5"
                        cy="8.5"
                        r="9"
                      />
                      <path
                        d="M8.5 8.5V5.2M8.5 8.5l3.9 3.9"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Refunded) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-warning-300"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-exclamation-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render (Verifying) 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-warning-300"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-exclamation-mark"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 10.5v-5"
                        stroke-linecap="round"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M10 14h0"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`ExchangeTransactionsRow > should render compact 1`] = `
<div>
  <table>
    <tbody>
      <tr
        class="relative border-b border-dashed transition-colors duration-100 last:border-b-0 border-theme-secondary-300 group dark:border-theme-secondary-800"
        data-testid="TableRow"
      >
        <td>
          <div
            class="flex flex-col gap-1 items-start py-3 px-3 pl-3 my-0 ml-3 rounded-l transition-colors duration-100 lg:py-0 lg:my-1 xl:pt-3 min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="w-20 h-5 cursor-pointer truncate"
              type="button"
            >
              <div
                class="flex overflow-hidden items-center space-x-2 w-full whitespace-nowrap"
              >
                <div
                  class="relative text-left sm:leading-5 grow leading-[17px]"
                >
                  <span
                    class="overflow-hidden absolute w-full min-w-0 text-sm text-base font-semibold no-ligatures text-theme-primary-600"
                    data-testid="Address__address"
                  >
                    id
                  </span>
                  <span>
                     
                  </span>
                </div>
              </div>
            </button>
            <div
              class="text-xs xl:hidden"
            >
              <span
                data-testid="TimeAgo"
              >
                A few seconds ago
              </span>
            </div>
          </div>
        </td>
        <td
          class="hidden text-sm xl:table-cell"
        >
          <div
            class="flex items-start px-3 my-1 font-semibold transition-colors duration-100 xl:items-center min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              data-testid="TimeAgo"
            >
              A few seconds ago
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex items-start py-3 px-3 my-0 text-sm font-semibold transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          />
        </td>
        <td
          class="lg:hidden"
        >
          <div
            class="flex flex-col gap-1.5 items-end py-2.5 px-3 my-1 font-semibold transition-colors duration-100 lg:py-2 xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              1 BTC
            </span>
          </div>
        </td>
        <td
          class="hidden lg:table-cell"
        >
          <div
            class="flex gap-3 justify-end items-start py-2 px-3 my-1 font-semibold transition-colors duration-100 xl:items-center xl:my-0 min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span
              class="text-sm whitespace-nowrap"
              data-testid="Amount"
            >
              100 ARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-center items-start py-3 px-3 my-0 transition-colors duration-100 xl:items-center min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <span>
              <div
                class="text-theme-danger-400"
              >
                <div
                  style="height: 20px; width: 20px;"
                >
                  <svg
                    id="circle-cross"
                    style="height: 100%; width: 100%;"
                    viewBox="0 0 20 20"
                    x="0"
                    xml:space="preserve"
                    xmlns="http://www.w3.org/2000/svg"
                    y="0"
                  >
                    <g
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                    >
                      <circle
                        cx="10"
                        cy="10"
                        r="9"
                        stroke-miterlimit="10"
                      />
                      <path
                        d="M7 13l6-6M13 13L7 7"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </span>
          </div>
        </td>
        <td>
          <div
            class="flex justify-end items-start py-3 px-3 pr-3 my-0 mr-3 rounded-r transition-colors duration-100 lg:py-0 lg:pt-2.5 xl:items-center xl:pt-0 text-theme-secondary-text min-h-[66px] lg:min-h-11 dark:group-hover:bg-theme-dark-950 group-hover:bg-theme-secondary-200"
          >
            <button
              class="inline-flex relative justify-center items-center p-1 mt-0 space-x-3 text-base font-semibold leading-tight text-center bg-transparent rounded duration-100 ease-linear cursor-pointer dark:bg-transparent focus:ring-2 disabled:cursor-not-allowed transition-colors-shadow outline-hidden text-theme-secondary-700 dark:text-theme-secondary-600 dark:hover:bg-theme-secondary-800 dark:hover:text-white hover:text-theme-primary-700 hover:bg-theme-primary-200 focus:outline-hidden focus:ring-theme-primary-400"
              data-testid="TableRemoveButton--compact"
              type="button"
            >
              <div
                class="flex items-center space-x-2"
              >
                <div>
                  <div
                    style="height: 16px; width: 16px;"
                  >
                    <svg
                      id="trash"
                      style="height: 100%; width: 100%;"
                      viewBox="0 0 20 20"
                      x="0"
                      xml:space="preserve"
                      xmlns="http://www.w3.org/2000/svg"
                      y="0"
                    >
                      <g
                        fill="none"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                      >
                        <path
                          d="M1 3.629h18M11.8 1H8c-.7 0-1.3.607-1.3 1.315h0v1.314H13V2.315C13 1.607 12.5 1 11.8 1h0zM8 14.449v-6.37M11.8 14.449v-6.37M15.7 17.787c-.1.707-.6 1.213-1.3 1.213H5.3c-.7 0-1.2-.506-1.3-1.213L2.9 3.629h14l-1.2 14.158z"
                        />
                      </g>
                    </svg>
                  </div>
                </div>
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
